# clash_convert

./: .gitignore  README.md  pyproject.toml  start.sh
app/: __init__.py  acl_presets.py  converters.py  main.py  models.py  share_links.py  subscription.py
app/static/: index.html
tests/: test_api.py  test_converter.py
