[project]
name = "clash-revert"
version = "0.1.0"
description = "Subscription converter web app for Mihomo/Clash, sing-box, and URI bundles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "uvicorn>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
